--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "connect-multiparty": "^2.1.1",
     "express": "^4.16.3",
     "gridfs-stream": "^1.1.1",
+    "joi": "^13.4.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
